--- a/src/app/templates/modals/create-modal/create-modal.component.html
+++ b/src/app/templates/modals/create-modal/create-modal.component.html
@@ -10,7 +10,7 @@
     {{modalContent}}
   </div>
   <div class="modal-footer justify-content-between" >
-    <button *ngIf="operation==='create'" class="btn btn-primary confirm-btn" (click)="confirmModal()" translate>{{'modal.continue'}}</button>
+    <button class="btn btn-primary confirm-btn" (click)="confirmModal()" translate>{{'modal.continue'}}</button>
     <button *ngIf="operation==='edit'" class="btn btn-primary confirm-btn" (click)="routeModal()" translate>{{'modal.manage'}}</button>
     <button *ngIf="operation==='create'" class="btn btn-primary confirm-btn" (click)="routeModal()" translate>{{'modal.edit'}}</button> 
     <button class="btn btn-primary confirm-btn" (click)="homeModal()" translate>{{'modal.home'}}</button> 
