--- a/src/app/pages/event/manage-events/manage-events.component.css
+++ b/src/app/pages/event/manage-events/manage-events.component.css
@@ -81,64 +81,81 @@ position: sticky;
 
 }
 
-.view-event{
+.view-event {
   font-size: 20pt;
+  padding: 4px 4px 4px 4px;
+  border-radius: 50%;
+  /*
   margin-left: 30px;
-  padding:8px 8px 8px 12px;
   border-left: solid 1px #79bcf4;
-  border-radius: 0px 3px 3px 0px;
-  
+  */
 }
 
-.view-event:hover{
-   background-color:#0e58a2;
+.view-event:hover {
+  font-weight: bolder;
   font-size: 20pt;
   cursor: pointer;
 }
 
 .edit-event{
   font-size: 20pt;
-  padding:8px 8px 8px 12px;
-  border-left: solid 1px #79bcf4;
-  border-radius: 0px 3px 3px 0px;
+  padding: 4px 4px 4px 4px;
+  border-radius: 50%;
 
 }
 
 .edit-event:hover{
-  background-color:#0e58a2;
+  font-weight: bolder;
+  font-size: 20pt;
   cursor: pointer;
 }
 
-.ks-text-translation{
-  padding:8px 8px 8px 12px;
+.translate-event {
+  font-size: 20pt;
+  padding: 8px 8px 8px 12px;
+  color: #ffffff;
+}
+
+.ks-text-translation {
+  padding: 8px 8px 8px 12px;
   border-left: solid 1px #79bcf4;
 }
 
-.language-done{
-  color:#ffffff;
+.language-done span{
+  color: #0e58a2;
   font-weight: lighter;
   font-size: 14pt;
   cursor: pointer;
-  border-radius: 3px;
-  padding:2px;
+  padding: 4px;
+  margin-left: 15%;
+  width: 100%
 }
 
-.language-done:hover{
-  background-color:#0e58a2;
+.language-done span i{
+  color:#0ca23e;
 }
 
-.language-pendant{
-  color:#87bef5;
+.language-done:hover {
+  background-color:#dffde9;
+}
+
+.language-pendant span{
+  color: #87bef5;
   font-weight: lighter;
   font-size: 14pt;
-  cursor:pointer;
-  border-radius: 3px;
-  padding:2px;
+  cursor: pointer;
+  padding: 4px;
+  margin-left: 15%;
 }
 
-.language-pendant:hover{
-  background-color:#0e58a2;
+.language-pendant span i{
+  color:#fe9124;
 }
+
+.language-pendant:hover {
+  background-color:#ffe4caff;
+}
+
 .description p {
   margin: 0 0 0px;
 }
@@ -161,14 +178,32 @@ position: sticky;
   color: #77b300;
 }
 
+.well-translation{
+  text-shadow: 2px 2px #0ca23e;
+
+} 
+.needed-translation{
+  text-shadow: 2px 2px #fe9124;
+}
+
 @media (min-width: 450px) {
   .description {
+    display: -moz-box;
+    display: -webkit-box;
+    display: box;
+    -moz-box-orient: vertical;
+    -webkit-box-orient: vertical;
+    box-orient: vertical;
+    -webkit-line-clamp: 5;
+    -moz-line-clamp: 5;
+    line-clamp: 5;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    /*
     display: -webkit-box;
     -webkit-line-clamp: 5;
     -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    height: 13rem;
+    */
   }
   .right {
     float: right;
