--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -105,14 +105,17 @@
   border-left: solid 1px #79bcf4;
 }
 
+.language-done{
+  padding:5px 0 5px 5px;
+}
+
 .language-done span{
   color: #0e58a2;
   font-weight: lighter;
-  font-size: 14pt;
+  font-size: 12pt;
   cursor: pointer;
   padding: 4px;
   margin-left: 15%;
-  width: 100%
 }
 
 .language-done span i{
@@ -123,10 +126,14 @@
   background-color:#dffde9;
 }
 
+.language-pendant{
+  padding:5px 0 5px 5px;
+}
+
 .language-pendant span{
   color: #87bef5;
   font-weight: lighter;
-  font-size: 14pt;
+  font-size: 12pt;
   cursor: pointer;
   padding: 4px;
   margin-left: 15%;
