--- a/src/app/templates/forms/service-form/service-form.component.html
+++ b/src/app/templates/forms/service-form/service-form.component.html
@@ -107,7 +107,7 @@
     <div [hidden]="locationsExists.value" class="col-sm-12">
       <div class="form-group" [ngClass]="{'has-error': (!location.valid && location.dirty), 'has-success': (location.value)}">
         <label for="textareaLocation" translate>{{'event-form.location'}}</label>
-        <textarea [formControl]="location" capitalize class="form-control" id="textareaLocation"></textarea>
+        <textarea [formControl]="location" autoresize capitalize class="form-control" id="textareaLocation"></textarea>
         <!-- Validation -->
         <span *ngIf="!location.value && location.dirty" class="help-block form-error" translate>{{'validation.required'}}</span>
         <span *ngIf="location.errors?.maxlength && location.dirty " class="help-block form-error" translate>{{'validation.location-length'}}</span>
