--- a/src/app/pages/application/manage-applications/application-crud/application-crud.component.html
+++ b/src/app/pages/application/manage-applications/application-crud/application-crud.component.html
@@ -24,9 +24,15 @@
                       </a>
                     </li>
                     <li class="nav-item" (click)="refreshObservations()">
-                      <a class="nav-link" href="#" data-toggle="tab" data-target="#tab4" translate>
+                      <a class="nav-link" href="#" data-toggle="tab" data-target="#tab3" translate>
                         <span class="ks-icon la la-mobile-phone text-danger"></span>
                         {{'navbar.observations'}}
+                      </a>
+                    </li>
+                    <li class="nav-item" (click)="refreshContributors()">
+                      <a class="nav-link" href="#" data-toggle="tab" data-target="#tab4" translate>
+                        <span class="ks-icon la la-mobile-phone text-danger"></span>
+                        {{'navbar.contributors'}}
                       </a>
                     </li>
                   </ul>
@@ -37,8 +43,11 @@
                     <div class="tab-pane" id="tab2" role="tabpanel">
                       <app-edit-services-application></app-edit-services-application>
                     </div>
-                     <div class="tab-pane" id="tab4" role="tabpanel">
+                     <div class="tab-pane" id="tab3" role="tabpanel">
                       <app-edit-observations-application></app-edit-observations-application>
+                    </div>
+                    <div class="tab-pane" id="tab4" role="tabpanel">
+                      <app-edit-contributors-application></app-edit-contributors-application>
                     </div>
                   </div>
                 </div>
